--- a/src/components/Droppable/style.scss
+++ b/src/components/Droppable/style.scss
@@ -2,6 +2,8 @@
   min-height: 50px;
   border: 1px solid #ccc;
   background-color: #f5f5f5;
+  padding: 5px;
+  flex-grow: 1;
   &.is-dragging {
     border-color: rgba(54, 162, 215, 0.5);
     background-color: rgba(54, 162, 215, 0.15);
